style: 불필요하게 긴 코드, 비직관적 명칭, 띄어쓰기 수정